[package]
name = "jesse"
version = "0.1.0"
authors = ["0x330a"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
alloy-primitives = "0.8"
alloy = { version = "0.5", features = ["full", "eip712", "rpc-client"] }
op-alloy = { git = "https://github.com/alloy-rs/op-alloy.git", rev = "1a9faf8d2dc050b4eb35887913878c5ee3763369", features = ["full"] }

eyre = "0.6"

[dev-dependencies]
alloy-rpc-types-anvil = "0.5"
alloy-provider = { version = "0.5", features = ["anvil-api", "anvil-node"] }
alloy-node-bindings = { version = "0.5" }